# Lame4Android

./: README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libLame/: CMakeLists.txt  build.gradle  proguard-rules.pro  readme.txt
libLame/src/main/: AndroidManifest.xml
libLame/src/main/java/com/kecson/lame4android/: EncodeThread.java  Lame.java  Mp3Recorder.java  PCMFormat.java  RingBuffer.java
libLame/src/main/jni/: wrapper.c  wrapper.h
libLame/src/main/jni/libmp3lame/: util.h
libLame/src/main/res/values/: strings.xml
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/kecson/sample/: App.kt  LameActivity.java  MainActivity.kt  VoiceRecorder.java
sample/src/main/res/layout/: activity_lame.xml  activity_main.xml
sample/src/main/res/menu/: main.xml
sample/src/main/res/values/: strings.xml
